--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+server.port=3030
+
+# MongoDB Information
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=SaloonDataBase
+spring.data.mongodb.username=saloonuser
+spring.data.mongodb.password=saloonpassword
