--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,6 @@
 # Basic dependabot.yml file with
 # minimum configuration for two package managers
+# more details: https://docs.github.com/en/code-security/supply-chain-security/enabling-and-disabling-version-updates
 
 version: 2
 updates:
